# ipd

./: .gitignore  .gitmodules  Dataset.md  Parts.md  README.md  convert_to_bop.ipynb  demo_reader.ipynb  demo_reader_render.ipynb  demo_render.ipynb  demo_results_multi.ipynb  demo_results_single.ipynb  pyproject.toml  render.ipynb  render.requirements.txt  results_foundation_pose.ipynb
datasets/models/: config.yaml
datasets/models/symmetries/: corner_bracket1_symm.json  corner_bracket_symm.json  gear1_symm.json  gear2_symm.json  single_pinch_clamp_symm.json  square_bracket_symm.json  u_bolt_symm.json  wraparound_bracket_symm.json
demo_results/: dataset_basket_0_PHOTONEO.yml  dataset_basket_1_PHOTONEO.yml  dataset_basket_2_PHOTONEO.yml  dataset_basket_3_PHOTONEO.yml  dataset_basket_4_PHOTONEO.yml  dataset_basket_5_PHOTONEO.yml  dataset_basket_6_PHOTONEO.yml  dataset_basket_7_PHOTONEO.yml  dataset_basket_8_PHOTONEO.yml  dataset_basket_9_PHOTONEO.yml  dataset_darkbg_0_PHOTONEO.yml  dataset_darkbg_1_PHOTONEO.yml  dataset_darkbg_2_PHOTONEO.yml  dataset_darkbg_3_PHOTONEO.yml  dataset_darkbg_4_PHOTONEO.yml  dataset_darkbg_5_PHOTONEO.yml  dataset_darkbg_6_PHOTONEO.yml  dataset_darkbg_7_PHOTONEO.yml  dataset_darkbg_8_PHOTONEO.yml  dataset_texturedbg_0_PHOTONEO.yml  dataset_texturedbg_1_PHOTONEO.yml  dataset_texturedbg_2_PHOTONEO.yml  dataset_texturedbg_3_PHOTONEO.yml
scripts/: README.md  get_dataset.sh
scripts/dataset/: README.md  get_dataset.py  get_dataset.requirements.txt
src/intrinsic_ipd/: __init__.py  constants.py  download_cli.py  evaluator.py  ipd.py  matcher.py  reader.py  render.py  utils.py
src/intrinsic_ipd/evaluate/: max_vertex_distance.py  robot_consistency.py
tests/: test_ipd_remove_symmetry.py
